tests/NormalTests/paczka1/fuzzy1/92978305.err
Error in line 5: wtEEFWpgUc S955 15,3
Error in line 8: S174 S955 0,3
Error in line 11: 7lRLGYIVpj S394 34,2
Error in line 19: S174 S174 59,6
Error in line 15: SRDVouwR07 S315 96,8
Error in line 28: wtEEFWpgUc S955 61,9
Error in line 30: S174 S315 97,5
Error in line 35: 7lRLGYIVpj S174 45,7
Error in line 39: 7lRLGYIVpj S315 54,0
